--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -21,14 +21,14 @@
     font-weight: bold;
     font-size: 2rem;
 }
- .footer-part2, .footer-part3, .footer-part4, .footer-part5, .footer-icons, .footer-base {
+ .footer-part2, .footer-part3, .footer-part4, .footer-icons, .footer-base {
     display: flex;
     justify-content: flex-start;  
     padding: 10px;
     font-size: 0.75rem;
 }
 
-.footer-part5 {
+.footer-part4 {
     display: inline-block;
 }
 
