--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,12 @@
 @import 'partials/variables';
 @import 'partials/animations';
 @import 'partials/nav';
-@import 'partials/homebackground';
 @import 'partials/homecontent';
 @import 'partials/aboutcontent';
 @import 'partials/myworkcontent';
-@import 'partials/blogcontent';
-@import 'partials/blogposts';
-@import 'partials/contactcontent';
 @import 'partials/footer';
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
 
 * {
     margin: 0;
@@ -27,14 +24,16 @@ body {
     grid-template-rows: 0.1fr auto 0.1fr;
     height: 100vh;
     font-family: $body-font-family;
+    background-color: $background-color
 }
 
 /* Mobile menu */
 header {
-    background-color: $white-color;
+    background-color: $background-color;
     position: fixed;
     height: 70px;
     width: 100%;
+   
 }
 
 header img {
