--- a/src/styles/partials/_homecontent.scss
+++ b/src/styles/partials/_homecontent.scss
@@ -25,6 +25,7 @@
     margin: 5px;
     margin-right: 30px;
     margin-left: 30px;
+  
 }
 section div.intro-sec1 img {
     clip-path: circle(50% at 50% 50%);
@@ -32,19 +33,19 @@ section div.intro-sec1 img {
     height: 150px;
 }
 .intro-container h2 {
-        font-size: 1.75rem;
+        font-size: 4rem;
         color: $heading-color;
     }
 .intro-container h1 {
-        font-size: 3rem;
+        font-size: 5em;
         font-family: $heading-font-family;
         font-weight: bold;
 }
     
-
 p span.features-special {
-color:$heading-color;
-font-size: 1.4rem;
+color:$text-color;
+font-size: 2rem;
+font-weight: 600;
 }
 
 h1 span.features-special {
@@ -52,63 +53,6 @@ color: $heading-color;
 font-size: 4rem;
 }
 /*******************************/
-/*****HOME PAGE BLOG feature SECTION******/
-.blog-recent-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 200px;
-    margin-top: 300px;
-    margin-right: 30px;
-    margin-left: 30px;
-}
-
-.blog-recent-container h3 {
-    padding: 20px;
-    background-color: $alternate-color;
-    border-radius: 30px; 
-}
-
-.blog-recent-container h3 a {
-    text-decoration: none; 
-    text-align: right;
-    color: $text-color;
-    
-}
-
-.blog-recent-container h3 a:hover {
-    background-color:$alternate-color;
-    cursor: pointer;
-    color: $hover-color;
-}
-
-.blog-recent-posts {
-    display: flex;
-    justify-content: center;
-    margin: 10px;
-}
-
-.blog-recent-posts a {
-    text-decoration: none;
-    text-align: left;
-    border-bottom: 1px dashed $heading-color;
-    color: $text-color;
-    width: 100%;
-    padding: 10px;
-}
-
-.blog-recent-posts strong {
-color: grey;
-font-size: 1.5rem;
-font-style: bold;  
-}
-
-.subtitle {
-    padding-bottom: 15px;
-    padding-top: 15px;
-    font-size: 1rem;
-}
-
 
 /* Tablet Styles */ /** MAIN CONTENT */
 @media only screen 
@@ -124,13 +68,6 @@ font-style: bold;
         margin-right: 200px;
         margin-left: 200px;
     }
-
-    .blog-recent-container {
-        
-        margin-right: 100px;
-        margin-left: 100px;
-    }
-    
         
 }
 
@@ -147,22 +84,16 @@ font-style: bold;
         margin-left: 200px;
     }
 
-    .blog-recent-container {
-
-        margin-right: 100px;
-        margin-left: 100px;
-    }
-
     .intro-container h2 {
-        font-size: 2rem;
+        font-size: 5rem;
     }
     .intro-container h1 {
-            font-size: 4rem;
+            font-size: 6rem;
         
         }
 
         p span.features-special {
-        font-size: 2rem;
+        font-size: 3rem;
         }
 
         h1 span.features-special {
