--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,13 +2,13 @@
 /*$section-bkgd-color: aqua;
 $hover-color: green;
 $accent-color: red;*/
-
-$alternate-color: #F4DBDB;
-$heading-color: #0F9B9B;
+$background-color:#e0ebe7;
+$alternate-color: darkgrey;      
+$heading-color: darkgrey;
 $hover-color: darkblue;
 $text-color: black; 
 $background-2nd-color: rosybrown;
 $white-color: white;
-$heading-font-family: 'Libre Baskerville', serif;
+$heading-font-family: sans-serif;
 $body-font-family: 'Montserrat', sans-serif;
 /*font-family: 'Playfair Display', serif; font-family: 'Libre Baskerville', serif;*/
