--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -61,7 +61,7 @@
 
 .footer-links {
     text-decoration: none;
-    color: $heading-color;
+    color: $alternate-color;
     font-size: 0.85rem;
     font-weight: 600;
 
