--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,14 +1,13 @@
 // create variables
-/*$section-bkgd-color: aqua;
-$hover-color: green;
-$accent-color: red;*/
-$background-color:#e0ebe7;
-$alternate-color: darkgrey;      
+
+
+
+
+$background-color:#a0f2d7;
+$alternate-color: #a0f2d7;      
 $heading-color: darkgrey;
 $hover-color: darkblue;
 $text-color: black; 
-$background-2nd-color: rosybrown;
 $white-color: white;
 $heading-font-family: sans-serif;
 $body-font-family: 'Montserrat', sans-serif;
-/*font-family: 'Playfair Display', serif; font-family: 'Libre Baskerville', serif;*/
