--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,18 +1,14 @@
-/*$section-bkgd-color: aqua;
-$hover-color: green;
-$accent-color: red;*/
-/*font-family: 'Playfair Display', serif; font-family: 'Libre Baskerville', serif;*/
 /*****ANIMATIONS******/
 /*****Alternative HOVER ANIMATION******/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
 .footer-links:hover, .icons:hover, .blog-recent-posts a:hover {
-  border-bottom: solid 2px darkgrey;
+  border-bottom: solid 2px #a0f2d7;
   color: darkblue;
 }
 
 /*****My work and blog posts ******/
 .read-more:hover, .arrow-right:hover, .project-description h4:hover {
-  background-color: darkgrey;
+  background-color: #a0f2d7;
   border-radius: 30px;
   padding: 10px;
   cursor: pointer;
@@ -39,7 +35,7 @@ $accent-color: red;*/
   left: 51%;
   right: 51%;
   bottom: 0;
-  background: darkgrey;
+  background: #a0f2d7;
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -220,20 +216,6 @@ $accent-color: red;*/
   }
 }
 
-/*******************************/
-/*****BACKGROUND FOR HOME PAGE COME BACK TO******/
-/*
-.background-img  {
-    width: 100%;
-    height: 100vh;
-    background-image: url("https://images.unsplash.com/photo-1588097237448-45f7aadebae1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 50%;
-    height: 70%;
-    border-radius: 50%;
-    }
-**/
 /*****WELCOME INTRO SECTION******/
 .intro-container {
   display: -webkit-box;
@@ -264,7 +246,9 @@ section div.intro-sec1 img {
 
 .intro-container h2 {
   font-size: 4rem;
-  color: darkgrey;
+  color: white;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
 }
 
 .intro-container h1 {
@@ -279,8 +263,15 @@ p span.features-special {
   font-weight: 600;
 }
 
+p span:nth-child(4).features-special {
+  color: #a0f2d7;
+  font-size: 2rem;
+  font-weight: 600;
+  font-family: sans-serif;
+}
+
 h1 span.features-special {
-  color: darkgrey;
+  color: #a0f2d7;
   font-size: 4rem;
 }
 
@@ -355,7 +346,7 @@ h1 span.features-special {
 /*******************************/
 /*****MY WORK MAIN CONTENT******/
 .completed-projects img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   padding: 5px;
   border-radius: 15px;
@@ -364,7 +355,7 @@ h1 span.features-special {
 
 .completed-projects ul li {
   list-style: none;
-  border-bottom: 3px solid darkgrey;
+  border-bottom: 3px solid black;
   border-bottom-style: dotted;
   margin-top: 30px;
 }
@@ -505,7 +496,7 @@ h1 span.features-special {
 
 .footer-links {
   text-decoration: none;
-  color: darkgrey;
+  color: #a0f2d7;
   font-size: 0.85rem;
   font-weight: 600;
 }
@@ -631,12 +622,13 @@ body {
       grid-template-rows: 0.1fr auto 0.1fr;
   height: 100vh;
   font-family: "Montserrat", sans-serif;
-  background-color: #e0ebe7;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #a0f2d7), color-stop(50%, white));
+  background: linear-gradient(90deg, #a0f2d7 50%, white 50%);
 }
 
 /* Mobile menu */
 header {
-  background-color: #e0ebe7;
+  background-color: #a0f2d7;
   position: fixed;
   height: 70px;
   width: 100%;
@@ -662,14 +654,14 @@ main {
 }
 
 .page-headings span {
-  color: darkgrey;
+  color: black;
   font-size: 2rem;
 }
 
 .page-headings b {
   display: block;
   font-size: 0.9rem;
-  color: darkgrey;
+  color: black;
   font-family: sans-serif;
 }
 
