--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,20 @@
 @import 'partials/animations';
 @import 'partials/nav';
 @import 'partials/homecontent';
-@import 'partials/aboutcontent';
 @import 'partials/myworkcontent';
 @import 'partials/footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
+
+
+
+@mixin flex($direction, $justify) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: $justify;
+    flex-direction: $direction;
+  }
+
 
 * {
     margin: 0;
@@ -16,28 +25,12 @@
 } 
 
 body {
-    margin: 0px;
-    padding: 0px;
-    min-height: 100vh;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 0.1fr auto 0.1fr;
+    @include flex(row, center);
+    font-family: $heading-font-family;
+    width: 100vw;
     height: 100vh;
     font-family: $body-font-family;
     background: linear-gradient(90deg, $background-color 50%, $white-color 50%);
-}
-
-/* Mobile menu */
-header {
-    background-color: $background-color;
-    position: fixed;
-    height: 70px;
-    width: 100%;
-   
-}
-
-header img {
-    width: 2.5em; 
 }
 
 main {
@@ -47,107 +40,125 @@ main {
     margin-bottom: 200px;
 }
 
-  /*****HEADINGS FOR EACH PAGE FORMATTING******/
-  .page-headings {
-    width: 100%;
-    font-family: $heading-font-family;
-    font-weight: 600;
-    font-size: 3rem;
-}
-.page-headings span {
-    color: $text-color;
-    font-size: 2rem;
-}  
-.page-headings b {
-    display: block;
-    font-size: 0.9rem;
-    color: $text-color;
-    font-family: $heading-font-family;
-}
-/*****CORE FOR MOST PAGE FORMATTING******/
-.core-container { 
-    display: flex;
-    flex-flow: row wrap;
-    padding: 0;   
-    margin: 0;
-    margin-top: 250px; 
-    margin-bottom: 100px;
-}
-
-.core-child, .core-child h2 {
-    padding: 10px;  
-    margin-right: 10px; 
-    margin-left: 10px; 
-}
-
-
-.core-info-content {
-    display: inline-block;
-    margin-top: 50px;
-    font-size: 1rem;
-    letter-spacing: 1px;
-
-}
-
-.info-container {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 0;
-    margin: 0;
-    margin-bottom: 100px; 
-}
-
-.info-child {
-    font-size: 0.75rem;
-}
-
-.info-container  h3 {
-    font-size: 1.5rem;
-    font-family: $heading-font-family;
-}
-
-/* Tablet Styles */ /** CORE CONTENT */
-@media only screen 
-and (min-device-width: 768px) 
-and (max-device-width: 1024px) 
-and (-webkit-min-device-pixel-ratio: 1) {
-  
- .core-child h2 { 
-    margin-right: 20px; 
-    margin-left: 20px; 
+@mixin background($colour, $url) {
+    background-image: url(#{$url});
+    background-position: center;
+    background-size: cover;
+    color: transparent;
+    
+    &:hover {
+      color: black;
+      background: $colour;
+      transition: .5s ease-in;
     }
- .core-child {
-        display: flex;
-        margin-top: -50px;
-        margin-right: 20px; 
-        margin-left: 20px;    
+}
+.container {
+    @include flex(column, center);
+    width: 65vw;
+    max-width: 1000px;
+    margin-bottom: 200px;
+    margin-top: 100px;
+  }
+
+.all-projects{
+    margin-top: 5%;
+    @include flex(row, flex-start);
+    a {
+        text-decoration: none;
+        color: white;
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 25%;
+        
     }
- .info-container {
-        justify-content: space-evenly;
-    }
- .info-child {
-        margin-right: 20px; 
-        margin-left: 20px; 
-           
+    div {
+        @include flex(column, center);
+        height: 350px;
+        
+        overflow: hidden;
+        margin: 10px 0;
+       
+        @media only screen and (min-width: 601px) {
+          margin: 10px 10px;
         }
+
+        .tech-stack,
+        .resource {
+          position: relative;
+          left: 2rem;
+          padding-top: 1rem;
+          li {
+            display: inline-block;
+            &:after {
+              content: " / ";
+            }
+          }
+        }
+
+        h3 {
+          font-family: $body-font-family;
+          font-size: 2em;
+          padding-left: 2rem;
+          padding-top: 1rem;
+          margin-right: 3em;
+        }
+       
+    }
+}
+
+#ytc {
+    @include background($background-color, "../imgs/ytc.png");
+  }
+
+#taskio {
+    @include background($background-color, "../imgs/taskio.png");
+  }
+
+#readme {
+    @include background($background-color, "../imgs/readme.png");
+  }
+#pokemon {
+    @include background($background-color, "../imgs/pokemon.png");
+  }
+#rpsls {
+    @include background($background-color, "../imgs/rpsls.png");
+  }
+#old_port {
+    @include background($background-color, "../imgs/old_port.png");
+  }
+
+#new_port {
+    @include background($background-color, "../imgs/new_port.png");
+  }
+#pokemon{
+    @include background($background-color, "../imgs/pokemon.png");
+  }
+
+@media only screen and (max-width: 600px) {
+    .container {
+      width: 95vw;
+    }
+  }
+
+/* Tablet Styles */ 
+@media only screen 
+and (min-device-width: 601px) 
+and (-webkit-min-device-pixel-ratio: 1) {
+    .container {
+        overflow-x: hidden;
+        width: 75vw;
+      }
       
 }
-/* Desktop Styles */ /* CORE CONTENT */
-@media only screen and (min-width: 996px) {
+/* Desktop Styles */ 
+@media only screen and (min-width:1201px) {
+.container {
+    overflow-x: hidden;
+    .container {
+        width: 65vw;
+    
+  }
 
-    .core-child {
-        display: flex;
-        justify-content: flex-start;   
-        margin-top: -50px;
-        margin-right: 20px; 
-        margin-left: 20px; 
-    }
-    .info-container {
-        justify-content: space-evenly;
-    }
-    .info-child {
-        margin-right: 20px; 
-        margin-left: 20px; 
-        }
-    }
+ }
 
+}
