--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,8 +54,6 @@ main {
    
 }
 
-
-
 .container {
     @include flex(column, center);
     width: 65vw;
@@ -73,29 +71,31 @@ main {
         flex-grow: 1;
         flex-shrink: 1;
         flex-basis: 25%;
-        
+   
     }
     div {
         @include flex(column, center);
         height: 350px;
-        
         overflow: hidden;
         margin: 10px 0;
      
-       
         @media only screen and (min-width: 601px) {
           margin: 10px 10px;
         }
 
+        h3{
+          display:none;
+        }
         .tech-stack,
         .resource {
           position: relative;
           left: 2rem;
           padding-top: 1rem;
           width: 300px;
-          display:none;
+          
           li {
             display: inline-block;
+           
             &:after {
               content: " / ";
             }
